Fix overflow for youtube video descriptions

--- a/client/styles/youtube.scss
+++ b/client/styles/youtube.scss
@@ -1,7 +1,6 @@
 .embed-wrapper {
   width: 100%;
-  background: #fff;
-  border: 1px solid #e7e7e7;
+
   .embed-container {
     position: relative;
     padding-bottom: 56.25%;
@@ -18,6 +17,9 @@
   }
   .video-info-container {
     padding: 0.5em 1em;
+    background: #fff;
+    border: 1px solid #e7e7e7;
+    margin-bottom: 1em;
     .youtube-video-title {
       font-size: 1.4em;
       font-weight: 400;
